Update config JSON file & Footer text

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -1,5 +1,5 @@
 {
-    "defaultPageTitle": "OldSkool - Bootstrap 5 HTML Template",
+    "defaultPageTitle": "OldSkool | Bootstrap 5 HTML Template",
     "templateName": "OldSkool",
     "classes": {
         "body": "",
